--- a/small_restaurant_app.css
+++ b/small_restaurant_app.css
@@ -5,20 +5,29 @@
 }
 
 .header{
-    background-color: yellow;
+    background-color: lightblue;
+    padding-bottom: 30px;
 }
 .restaurant-name{
     text-align: center;
+    text-decoration: underline;
 }
 .order-lists{
     display: flex;
     flex-direction: row;
     margin-top: 30px;
+    
 }
 .table-1-list-div, .table-2-list-div, .table-3-list-div{
     flex: 1;
-    background-color: blueviolet;
+    background-color: lightcyan;
     padding-top: 30px;
+    padding-bottom: 200px;
+    border-right: solid 2px black;
+    text-align: center;
+    text-decoration: bold;
+    text-decoration: underline;
+    
 }
 .input-div{
     display: flex;
@@ -26,6 +35,7 @@
     padding-left: 20px;
     padding-right: 20px;
     padding-bottom: 30px;
+    padding-top: 20px;
 }
 .inputs{
     flex:1;
@@ -37,4 +47,5 @@
     color:black;
     background-color: aqua;
     border-radius: 5px;
+    padding: 6px;
 }
